# logtocw

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
commands/: command_1
src/: cli.py  log_sender.py  worker.py
tests/: conftest.py  test_cli.py
