[tool.poetry]
name = "logtocw"
version = "0.1.0"
description = "A Python program that send Docker container logs to CloudWatch Logs"
authors = ["yar-jul"]
readme = "README.md"
packages = [{include = "logtocw"}]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
